--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.9.0",
+    "react-tabs": "^6.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
